<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".menu.MenuFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_my_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/beige"
            android:backgroundTint="@color/beige"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu_my_child"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tintMode="add"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar"
                    app:tint="@color/text_second"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_menu_my_child"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/my_child_menu"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/main_txt" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/beige"
            android:backgroundTint="@color/beige"
            android:onClick="mainMenuOnClickPanel"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu_main_menu"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tintMode="add"
                    app:srcCompat="@android:drawable/ic_menu_view"
                    app:tint="@color/text_second"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_main_menu_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/main_menu_menu"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/main_txt" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/beige"
            android:backgroundTint="@color/beige"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu_fragment_articles"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tintMode="add"
                    app:srcCompat="@android:drawable/ic_dialog_dialer"
                    app:tint="@color/text_second"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_menu_text_articles"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/article_bt_menu"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/main_txt" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/beige"
            android:backgroundTint="@color/beige"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu_fragment_calendar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tintMode="add"
                    app:srcCompat="@android:drawable/ic_menu_day"
                    app:tint="@color/text_second"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_menu_text_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/calendar_bt_menu"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/main_txt" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_about_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/beige"
            android:backgroundTint="@color/beige"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu_about_company"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tintMode="add"
                    app:srcCompat="@android:drawable/ic_menu_info_details"
                    app:tint="@color/text_second"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_menu_about_company"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/about_company_menu"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/main_txt" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/beige"
            android:backgroundTint="@color/beige"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu_fragment_settings"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tintMode="add"
                    app:srcCompat="@android:drawable/ic_menu_manage"
                    app:tint="@color/text_second"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_menu_text_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/settings_bt_menu"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/main_txt" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main_menu_contact_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/beige"
            android:backgroundTint="@color/beige"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_menu_contact_support"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:tintMode="add"
                    app:srcCompat="@android:drawable/ic_menu_myplaces"
                    app:tint="@color/text_second"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tv_main_contact_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/titan_one"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/main_menu_contact_support"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/main_txt" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>

